Ajout de nouvelle fonctionnalite backend frontend

--- a/frontend/app/templates/login.html
+++ b/frontend/app/templates/login.html
@@ -105,7 +105,7 @@
                     checked
                   />
                   <label class="form-check-label" for="student-account-option"
-                    >Etud.</label
+                    >Etudiant</label
                   >
                 </div>
                 <!-- End student option -->
@@ -120,7 +120,7 @@
                     value="teacher-option"
                   />
                   <label class="form-check-label" for="teacher-account-option"
-                    >Enseign.</label
+                    >Enseignant</label
                   >
                 </div>
                 <!-- End teacher option -->
@@ -135,7 +135,7 @@
                     value="admin-option"
                   />
                   <label class="form-check-label" for="admin-account-option"
-                    >Admin.</label
+                    >Admin</label
                   >
                 </div>
                 <!-- End admin option -->
